Mods before going public

--- a/BatchNorm.ipynb
+++ b/BatchNorm.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "BatchNorm.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyPaRZ+oOjvW/F2gwuEqV6kO",
+      "authorship_tag": "ABX9TyOs/sgkEPwlZ01EQffa8tHs",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -37,43 +37,13 @@
     {
       "cell_type": "code",
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "CddKDoKdnRwG",
-        "outputId": "010d0a06-5257-49ab-b78d-d10a48f00109"
+        "id": "CddKDoKdnRwG"
       },
       "source": [
-        "import os\n",
-        "import urllib\n",
-        "from getpass import getpass\n",
-        "\n",
-        "user = input('User name: ')\n",
-        "password = getpass('Password: ')\n",
-        "password = urllib.parse.quote(password)\n",
-        "repo_address = input('Repo Address: ')\n",
-        "branch_name = input('Branch name: ')\n",
-        "\n",
-        "cmd_string = 'git clone https://{}:{}@github.com/{}.git -b {}'.format(\n",
-        "    user, password, repo_address, branch_name\n",
-        ")\n",
-        "\n",
-        "os.system(cmd_string)\n",
-        "cmd_string, password = \"\", \"\""
+        "!git clone https://github.com/sayakpaul/Adaptive-Gradient-Clipping"
       ],
-      "execution_count": 1,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "User name: sayakpaul\n",
-            "Password: ··········\n",
-            "Repo Address: sayakpaul/Adaptive-Gradient-Clipping\n",
-            "Branch name: main\n"
-          ],
-          "name": "stdout"
-        }
-      ]
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -84,7 +54,7 @@
         "import sys\n",
         "sys.path.append(\"Adaptive-Gradient-Clipping\")"
       ],
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -101,7 +71,7 @@
         "tf.random.set_seed(42)\n",
         "print(tf.__version__)"
       ],
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -133,7 +103,7 @@
         "  \n",
         "print(\"Number of accelerators: \", strategy.num_replicas_in_sync)"
       ],
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -423,7 +393,7 @@
         "import time\n",
         "import utils"
       ],
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -451,7 +421,7 @@
         "print(f\"Total validation samples: {dataloader.count_data_items(valid_filenames)}\")\n",
         "print(f\"Global batch size: {BATCH_SIZE}\")"
       ],
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -479,7 +449,7 @@
         "samples_images, sample_labels = next(iter(train_ds))\n",
         "print(samples_images.shape, sample_labels.shape)"
       ],
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -517,7 +487,7 @@
         ")\n",
         "print(f\"Total learnable parameters: {model.count_params()/1e6} M\")"
       ],
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -545,7 +515,7 @@
         "    )\n",
         "]"
       ],
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -575,7 +545,7 @@
         "                   epochs=100)\n",
         "print(f\"Total training time: {(time.time() - start)/60.} minutes\")"
       ],
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -805,7 +775,7 @@
         "_, accuracy = model.evaluate(validation_ds)\n",
         "print(\"Validation accuracy: {:.2f}%\".format(accuracy*100))"
       ],
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
