--- a/AGC.ipynb
+++ b/AGC.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "AGC.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyPbEsSoXJGHaeGDCtZxMKC8",
+      "authorship_tag": "ABX9TyMSD/ecW2CUjeYTcoPfPMgK",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -48,44 +48,13 @@
     {
       "cell_type": "code",
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "CddKDoKdnRwG",
-        "outputId": "5775c08c-dbc4-4f2d-b523-9b118994f9fe"
+        "id": "CddKDoKdnRwG"
       },
       "source": [
-        "import os\n",
-        "import urllib\n",
-        "from getpass import getpass\n",
-        "\n",
-        "\n",
-        "user = input('User name: ')\n",
-        "password = getpass('Password: ')\n",
-        "password = urllib.parse.quote(password)\n",
-        "repo_address = input('Repo Address: ')\n",
-        "branch_name = input('Branch name: ')\n",
-        "\n",
-        "cmd_string = 'git clone https://{}:{}@github.com/{}.git -b {}'.format(\n",
-        "    user, password, repo_address, branch_name\n",
-        ")\n",
-        "\n",
-        "os.system(cmd_string)\n",
-        "cmd_string, password = \"\", \"\""
+        "!git clone https://github.com/sayakpaul/Adaptive-Gradient-Clipping"
       ],
-      "execution_count": 1,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "User name: sayakpaul\n",
-            "Password: ··········\n",
-            "Repo Address: sayakpaul/Adaptive-Gradient-Clipping\n",
-            "Branch name: main\n"
-          ],
-          "name": "stdout"
-        }
-      ]
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -96,7 +65,7 @@
         "import sys\n",
         "sys.path.append(\"Adaptive-Gradient-Clipping\")"
       ],
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -113,7 +82,7 @@
         "tf.random.set_seed(42)\n",
         "print(tf.__version__)"
       ],
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -145,7 +114,7 @@
         "  \n",
         "print(\"Number of accelerators: \", strategy.num_replicas_in_sync)"
       ],
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -435,7 +404,7 @@
         "import time\n",
         "import utils"
       ],
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -463,7 +432,7 @@
         "print(f\"Total validation samples: {dataloader.count_data_items(valid_filenames)}\")\n",
         "print(f\"Global batch size: {BATCH_SIZE}\")"
       ],
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -491,7 +460,7 @@
         "samples_images, sample_labels = next(iter(train_ds))\n",
         "print(samples_images.shape, sample_labels.shape)"
       ],
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -562,7 +531,7 @@
         "    def call(self, inputs, *args, **kwargs):\n",
         "        return self.mini_vgg(inputs)"
       ],
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -606,7 +575,7 @@
         ")\n",
         "print(f\"Total learnable parameters: {model.mini_vgg.count_params()/1e6} M\")"
       ],
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -634,7 +603,7 @@
         "    )\n",
         "]"
       ],
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -664,7 +633,7 @@
         "                   epochs=100)\n",
         "print(f\"Total training time: {(time.time() - start)/60.} minutes\")"
       ],
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -896,7 +865,7 @@
         "_, accuracy = model.evaluate(validation_ds)\n",
         "print(\"Validation accuracy: {:.2f}%\".format(accuracy*100))"
       ],
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
